# seqio

./: CMakeLists.txt  README.md
include/: SeqIO.hh  buffered_streams.hh
include/SeqIO/: SeqIO.hh  buffered_streams.hh
include/zstr/: zstr.hpp
tests/: benchmark_io.cpp  common.cpp  common.hh  test_IO.cpp  test_seqio.cpp
